fix: reformat code and complete README